force-app/main/default/objects/Prometheion_Audit_Log__c/Prometheion_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Prometheion Audit Log</label>
    <pluralLabel>Prometheion Audit Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Audit Log Number</label>
        <displayFormat>AL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Text</type>
        <length>100</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Text</type>
        <length>100</length>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity ID</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Audit Log Users</relationshipLabel>
        <relationshipName>Audit_Log_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
</CustomObject>