force-app/main/default/objects/Prometheion_Audit_Log__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>